--- a/style.css
+++ b/style.css
@@ -3,21 +3,55 @@ body
     margin: 0;
     padding: 0;
     background-position-x: 150px;
+    background-image: url("baseball-background.jpg");
+    background-repeat: no-repeat;
+    background-size: 960px;
 }
 
 #content
 {
     padding: 20px;
     background-color: rgba(255,255,255,0.85);
+    width: 800px;
+    margin: auto;
+    margin-top: 150px;
+    text-align: center justify;
+    border-right: 2px red solid;
+    border-left: 2px red solid;
 }
 
 .frame
 {
     padding:20px;
     margin:10px;
+    float: right;
+    width: 150px;
+    border-left: 2px solid black;
 }
 
 .frame img
 {
     width: 150px;
+}
+
+.imgcaption
+{
+    text-align: center;
+    font-style: italic;
+}
+
+.kiemelt
+{
+    color: red;
+    font-weight: bold;
+}
+
+a
+{
+    text-decoration: none;
+}
+
+a:hover
+{
+    color: red;
 }
